fixed footer inner alignment.

--- a/wp-content/themes/fusepilot/compass/sass/style.sass
+++ b/wp-content/themes/fusepilot/compass/sass/style.sass
@@ -709,6 +709,8 @@ form
       
       .copyright
         display: inline
+        font-size: 10px
+        float: left
         p
           display: inline
       
